@@ -1,5 +1,6 @@
 Version 6.2.0
 - completely refactored MySqlConnectionStringBuilder
+- now supporting TableDirect command type
 
 Version 6.1.3
 - fixed compilation problem in NativeDriver inside ExecuteDirect  (bug #47354)
